logs/pytlu.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/basil'...
Listing './lib/python3.5/site-packages/basil/HL'...
Compiling './lib/python3.5/site-packages/basil/HL/RegisterHardwareLayer.py'...
***   File "./lib/python3.5/site-packages/basil/HL/RegisterHardwareLayer.py", line 190
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/basil/HL/sensirion_ekh4.py'...
***   File "./lib/python3.5/site-packages/basil/HL/sensirion_ekh4.py", line 33
    print "sensirionEKH4.write() %s"%cmd
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/basil/HL/tti_ql355tp.py'...
***   File "./lib/python3.5/site-packages/basil/HL/tti_ql355tp.py", line 29
    print "ttiTp355tp.write() %s"%command
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/basil/RL'...
Listing './lib/python3.5/site-packages/basil/TL'...
Compiling './lib/python3.5/site-packages/basil/TL/SiTcp.py'...
***   File "./lib/python3.5/site-packages/basil/TL/SiTcp.py", line 85
    print data, array('B', ack)[8:]
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/basil/dut.py'...
***   File "./lib/python3.5/site-packages/basil/dut.py", line 251
    raise exc[0], exc[1], exc[2]  # raise previous error
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/basil/utils'...
Listing './lib/python3.5/site-packages/basil/utils/sim'...
Compiling './lib/python3.5/site-packages/basil/utils/sim/SiLibUsb.py'...
***   File "./lib/python3.5/site-packages/basil/utils/sim/SiLibUsb.py", line 87
    print 'SiUSBDevice:WriteI2C', address, data  # raise NotImplementedError("To be implemented.")
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/basil/utils/sim/Test.py'...
***   File "./lib/python3.5/site-packages/basil/utils/sim/Test.py", line 128
    print 'bus.read', ret
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/basil/utils/utils.py'...
***   File "./lib/python3.5/site-packages/basil/utils/utils.py", line 15
    print 'loging:', locals()
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/basil_daq-2.4.10.egg-info'...
Listing './lib/python3.5/site-packages/numexpr'...
Listing './lib/python3.5/site-packages/numexpr/tests'...
Listing './lib/python3.5/site-packages/numexpr-2.6.4.dist-info'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/nose_tools'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.14.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytlu'...
Compiling './lib/python3.5/site-packages/pytlu/tlu.py'...
***   File "./lib/python3.5/site-packages/pytlu/tlu.py", line 176
    print data_tuple[0]
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pytlu-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tables'...
Listing './lib/python3.5/site-packages/tables/.libs'...
Listing './lib/python3.5/site-packages/tables/misc'...
Listing './lib/python3.5/site-packages/tables/nodes'...
Listing './lib/python3.5/site-packages/tables/nodes/tests'...
Listing './lib/python3.5/site-packages/tables/scripts'...
Listing './lib/python3.5/site-packages/tables/tests'...
Listing './lib/python3.5/site-packages/tables-3.4.2.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
